fix: basic ui changes fixed including gaps and spacings

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -227,6 +227,8 @@
   --color-gray-50: #f0f1f4;
   --color-gray-25: #f7f8fa;
 
+  --color-card-border:#DFE3E560
+
   /* Additional Colors */
   --color-red: #e81b00;
   --color-green: #3f9e60;
